[package]
name = "yttml"
version = "0.0.1"
edition = "2021"
description = "A collection of utilities for working with YouTube-flavored TTML (SRV3) captions"
license = "MIT"
authors = [
    "Cappy Ishihara <cappy@fyralabs.com>"
]
categories = [
    "text-processing",
    "multimedia::video"
]
keywords = [
    "youtube",
    "ttml",
    "srv3",
    "captions",
    "subtitles"
]
repository = "https://github.com/FyraLabs/yttml"
[dependencies]
aspasia = "0.2.1"
clap = { version = "4.5.16", features = ["derive"] }
ron = "0.8.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_yml = "0.0.12"
srv3-ttml = { path = "crates/srv3-ttml", version = "0.1.0"}

[workspace]
members = [
   "crates/srv3-ttml"
]
